@@ -1,3 +1,9 @@
+2017-09-06  Ola Jeppsson  <ola@adapteva.com>
+
+	* sim-if.c (find_sym): New function.
+	(epiphany_user_init): Do not move stack if __stack is a global
+	address.
+
 2017-04-09  Ola Jeppsson  <ola@adapteva.com>
 
 	* configure.ac: Do not use += operator for appending to
